Se agrego UI responsivo en formularios

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -183,8 +183,7 @@ md-sidenav {
 md-datepicker-button
 	display none
 
-md-datepicker
-	padding-top 15px !important
+
 
 md-datepicker
 	.md-datepicker-input-container
@@ -230,6 +229,7 @@ md-tab-item
 	border-color #a6d9a8
 
 md-datepicker
+	padding-top 19px
 	.md-datepicker-button
 		display none
 	.md-datepicker-input-container
