--- a/client/app/views/home.html
+++ b/client/app/views/home.html
@@ -31,7 +31,7 @@
     </div>
     <div layout="row" layout-sm="column">
       <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.facultad">
+        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.planestudios">
           <span class="content-wrapper">
           <span class="tile-content">
             <span class="tile-img bgc-white" style="background-image: url(images/bghome-3.jpg);background-size:cover;"></span>
