--- a/client/app/views/cursos/form.html
+++ b/client/app/views/cursos/form.html
@@ -9,10 +9,9 @@
         </md-button>
       </div>
     </md-toolbar>
-    <md-dialog-content style="min-width:600px;max-height:810px; ">
-      <md-content class="md-padding">
-        <div  flex-container="row" flex-gutter="24">
-               <div flex-item>
+    <md-dialog-content class="window-modal-content-sm">
+        <div flex  layout="row" layout-sm="column">
+               <div flex>
                    <md-input-container class="md-block">
                      <label>Código</label>
                      <input required name="codigo" ng-model="model.codigo" validate-unique query-model='cursos'  attribute='codigo'>
@@ -25,7 +24,7 @@
                      </div>
                    </md-input-container>
                </div>
-               <div flex-item>
+               <div flex>
                  <md-input-container class="md-block">
                    <label>Tipo</label>
                   <md-select ng-model="model.tipo">
@@ -35,8 +34,8 @@
                </md-input-container>
                </div>
            </div>
-           <div  flex-container="row" flex-gutter="24">
-               <div flex-item>
+           <div flex  layout="row" layout-sm="column">
+               <div flex>
                  <md-input-container class="md-block">
                    <label>Nombre de Curso</label>
                    <input required name="nombre" ng-model="model.nombre">
@@ -48,19 +47,18 @@
                </div>
            </div>
 
-      </md-content>
-      <div class="dialog__actions">
-          <div class="pull-left">
-            <md-checkbox ng-model="model.activo">
-                 Activo
-               </md-checkbox>
+           <div  flex  layout="row" layout-sm="column">
+            <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
+              <md-checkbox ng-model="model.activo">
+                  Activo
+                </md-checkbox>
+            </div>
+            <div flex="70" layout="row"  layout-align="end center" flex-sm="100">
+              <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+              <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
+            </div>
           </div>
-         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
     </md-dialog-content>
-    <md-dialog-actions layout="row">
 
-    </md-dialog-actions>
   </form>
 </md-dialog>
