--- a/client/app/views/planestudios/form.html
+++ b/client/app/views/planestudios/form.html
@@ -9,10 +9,9 @@
         </md-button>
       </div>
     </md-toolbar>
-    <md-dialog-content style="min-width:800px;max-height:810px; ">
-      <md-content class="md-padding">
-        <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
+    <md-dialog-content class="window-modal-content-sm">
+        <div flex  layout="row" layout-sm="row">
+            <div flex>
               <md-input-container class="md-block">
                 <label>Facultad</label>
                 <input required name="facultad" ng-model="escuela._facultad.nombre" readonly>
@@ -23,8 +22,8 @@
 
             </div>
         </div>
-        <div  flex-container="row" flex-gutter="24">
-          <div flex-item>
+        <div flex  layout="row" layout-sm="row">
+          <div flex>
           <md-input-container class="md-block">
             <label>Nombre de Escuela</label>
             <input required name="nombre" ng-model="escuela.nombre" readonly>
@@ -36,9 +35,9 @@
         </div>
 
 
-           <div  flex-container="row" flex-gutter="24">
+           <div flex  layout="row" layout-sm="row">
 
-               <div flex-item>
+               <div flex>
                  <md-input-container class="md-block">
                    <label>Nombre</label>
                    <input required name="nombre" ng-model="model.nombre">
@@ -48,8 +47,8 @@
                  </md-input-container>
                </div>
            </div>
-           <div  flex-container="row" flex-gutter="24">
-             <div flex-item>
+           <div flex  layout="row" layout-sm="column">
+             <div flex>
                <md-input-container class="md-block">
                  <label>Periodo</label>
                  <md-select ng-model="model._periodo" ng-model-options="{trackBy: '$value._id'}">
@@ -59,13 +58,13 @@
                  </md-select>
                </md-input-container>
              </div>
-               <div flex-item>
+               <div flex>
                  <md-input-container class="md-block">
                    <label>Resolución</label>
                    <input required name="resolucion" ng-model="model.resolucion">
                  </md-input-container>
                </div>
-               <div flex-item>
+               <div flex>
                  <md-input-container class="md-block">
                    <md-datepicker class="md-block" required name="fecha_resolucion" ng-model="model.fecha_resolucion" md-placeholder="Fecha Resolución"></md-datepicker>
                    <div ng-messages="myForm.fecha_resolucion.$error"  ng-if="submited">
@@ -74,19 +73,18 @@
                  </md-input-container>
                </div>
            </div>
-      </md-content>
-      <div class="dialog__actions">
-          <div class="pull-left">
-            <md-checkbox ng-model="model.activo">
-                 Activo
-               </md-checkbox>
+           <div  flex  layout="row" layout-sm="column">
+            <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
+              <md-checkbox ng-model="model.activo">
+                  Activo
+                </md-checkbox>
+            </div>
+            <div flex="70" layout="row"  layout-align="end center" flex-sm="100">
+              <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+              <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
+            </div>
           </div>
-         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
     </md-dialog-content>
-    <md-dialog-actions layout="row">
 
-    </md-dialog-actions>
   </form>
 </md-dialog>
