--- a/client/app/views/app.html
+++ b/client/app/views/app.html
@@ -8,7 +8,10 @@
 
   <md-content flex layout="row" class="page-content" layout-align="center start" style="background-color:#f2f2f2">
     <div flex ui-view >
-      <div layout="row" ng-include="'views/home.html'" flex layout-fill>
+      <div ng-if="$root.USER._grupo.codigo=='ADMIN'" layout="row" ng-include="'views/home.html'" flex layout-fill>
+
+      </div>
+      <div ng-if="$root.USER._grupo.codigo=='MIC'" layout="row" ng-include="'views/home/home_mic.html'" flex layout-fill>
 
       </div>
     </div>
