--- a/client/app/views/mic/silabus/list.html
+++ b/client/app/views/mic/silabus/list.html
@@ -18,7 +18,7 @@
       <div flex-item>
           <md-input-container class="md-block">
             <label>Escuela</label>
-            <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" ng-change="ListPlanEstudios()">
+            <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadPlanEstudios()">
               <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
                 {{escuela.nombre}}
               </md-option>
@@ -27,10 +27,10 @@
       </div>
       <div flex-item>
           <md-input-container class="md-block">
-            <label>Escuela</label>
-            <md-select ng-model="filter._planestudio" ng-model-options="{trackBy: '$value._id'}" ng-change="ListDetallePlanEstudios()">
-              <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
-                {{escuela.nombre}}
+            <label>Plan de Estudios</label>
+            <md-select ng-model="filter._planestudio" ng-model-options="{trackBy: '$value._id'}" ng-change="Refresh()">
+              <md-option ng-repeat="plan in planes" ng-value="plan">
+                {{plan.nombre}}
               </md-option>
             </md-select>
           </md-input-container>
@@ -91,39 +91,11 @@
     </tr>
   </tbody>
 </table>
-<div  flex-container="row" flex-gutter="24">
-    <div flex-item>
-<md-input-container class="md-block">
-  <label>Comentarios</label>
-  <textarea ng-model="user.biography" columns="1" md-maxlength="150" rows="3"></textarea>
-</md-input-container>
-</md-content>
-</div>
-</DIV>
+
 </div>
 
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="UI.editMode" ng-click="RevisarPlan($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
+<md-button ng-if="UI.editMode" ng-click="Edit($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
   <md-tooltip md-direction="left">Validar Silabus</md-tooltip>
   <md-icon md-font-icon="fa fa fa-eye fa-lg"></md-icon>
 </md-button>
-<!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="!UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
- <md-fab-trigger>
-   <md-button aria-label="menu" class="md-fab md-warn">
-     <md-tooltip md-direction="left">Opciones</md-tooltip>
-     <md-icon md-font-icon="fa fa-navicon fa-lg tc-white"></md-icon>
-   </md-button>
- </md-fab-trigger>
- <md-fab-actions>
-   <md-button ng-if="!UI.editMode" ng-click="RevisarPlan($event)" class="md-fab md-raised md-mini"  aria-label="{{UI.message.Buttons.New}}" >
-     <md-tooltip md-direction="left">Validar Plan de Estudios</md-tooltip>
-     <md-icon md-font-icon="fa fa-check fa-lg tc-red-500"></md-icon>
-   </md-button>
-   <md-button ng-if="!UI.editMode" ng-click="Print($event)" class="md-fab md-raised md-mini"  aria-label="{{UI.message.Buttons.New}}" >
-     <md-tooltip md-direction="left">Imprimir</md-tooltip>
-     <md-icon md-font-icon="fa fa-print fa-lg tc-red-500"></md-icon>
-   </md-button>
-
- </md-fab-actions>
-</md-fab-speed-dial>
