--- a/client/app/views/home/home_mic.html
+++ b/client/app/views/home/home_mic.html
@@ -2,21 +2,21 @@
   <md-content flex layout-margin  style="max-width:1020px;background-color:#f2f2f2;">
     <div layout="row" layout-sm="column">
       <div class="dashboard display-animation" flex="67" flex-sm="100">
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
+        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.mic_revisionplanestudios">
           <span class="content-wrapper">
           <span class="tile-content">
             <span class="tile-img bgc-teal-300" style="background-image: url(images/bghome-7.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500" >
 
               <span class="title">Revisión del Plan de Estudios</span>
-              <p>Administre las facultades y escuelas </p>
+              <p>Verifique el plan de estudios de acuerdo a las asignaturas base</p>
             </span>
           </span>
           </span>
         </a>
       </div>
       <div class="dashboard display-animation" flex="33" flex-sm="100">
-        <a href class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.pabellones">
+        <a href class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.mic_asignaturas">
           <span class="content-wrapper">
           <span class="tile-content">
             <span class="tile-img" style="background-image: url(images/bghome-8.jpg);background-size:cover;"></span>
@@ -31,26 +31,26 @@
     </div>
     <div layout="row" layout-sm="column">
       <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.planestudios">
+        <a href class="tile tile-lg bgc-green-500  ripple-effect " ui-sref="app.mic_silabus">
           <span class="content-wrapper">
           <span class="tile-content">
-            <span class="tile-img bgc-white" style="background-image: url(images/bghome-3.jpg);background-size:cover;"></span>
+            <span class="tile-img bgc-white" style="background-image: url(images/bghome-9.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title tc-white">Reporte 1</span>
-              <p>Detalle Reporte 1</p>
+              <span class="title tc-white">Registro del Silabus</span>
+              <p class="tc-white">Realize el registro del Silabus</p>
             </span>
           </span>
           </span>
         </a>
       </div>
       <div class="dashboard display-animation" flex>
-        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.facultad">
+        <a href class="tile tile-lg bgc-white ripple-effect " ui-sref="app.mic_silabus">
           <span class="content-wrapper">
           <span class="tile-content">
             <span class="tile-img bgc-white" style="background-image: url(images/bghome-4.jpg);background-size:cover;"></span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title">Reporte 2</span>
-              <p>Detalle reporte 2</p>
+              <span class="title">Reporte 1</span>
+              <p>Detalle reporte 1</p>
             </span>
           </span>
           </span>
@@ -64,8 +64,8 @@
                 <i class="fa fa-area-chart fa-5x"></i>
             </span>
             <span class="tile-holder tile-holder-sm grey-500">
-              <span class="title ">Reporte 3</span>
-              <p>Detalle Reporte 3</p>
+              <span class="title ">Reporte 2</span>
+              <p>Detalle Reporte 2</p>
             </span>
           </span>
           </span>
