Cambios en docentes y alumnos

--- a/client/app/views/docentes/form.html
+++ b/client/app/views/docentes/form.html
@@ -1,61 +1,125 @@
-<md-dialog aria-label="List dialog">
-<md-dialog-content>
-  <md-toolbar>
-    <div class="md-toolbar-tools">
-      <span>{{title}}</span>
-      <!-- fill up the space between left and right area -->
-      <span flex></span>
-      <md-button class="md-icon-button" aria-label="More" ng-click="Cancel()">
-       <md-icon md-font-icon="fa fa-close fa-lg"></md-icon>
-     </md-button>
-    </div>
-  </md-toolbar>
+<md-dialog aria-label="{{title}}">
+  <form name="myForm" novalidate>
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <span>{{title}}</span>
+        <span flex></span>
+        <md-button class="md-icon-button" ng-click="Cancel()">
+          <md-icon md-font-icon="fa fa-close fa-lg" aria-label="Cerrar dialogo"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
 
-
-    <div class="dialog__content p++">
-    <form name="myForm" >
-     <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-                <md-input-container class="md-block">
-                  <label>Nombres</label>
-                  <input required name="nombres" ng-model="model.nombres">
-                  <div ng-messages="myForm.nombres.$error"  ng-if="submited">
-                    <div ng-message="required">{{message.Required}}</div>
-                  </div>
-                </md-input-container>
+    <md-dialog-content class="window-modal-content-sm">
+      <div flex layout="row" layout-sm="row">
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Código</label>
+            <input required name="codigo" ng-model="model.codigo">
+            <div ng-messages="myForm.codigo.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
             </div>
-             <div flex-item>
-               <md-input-container class="md-block">
-                 <label>Apellidos</label>
-                 <input required name="apellidos" ng-model="model.apellidos">
-                 <div ng-messages="myForm.apellidos.$error"  ng-if="submited">
-                   <div ng-message="required">{{message.Required}}</div>
-                 </div>
-               </md-input-container>
-            </div>
+          </md-input-container>
         </div>
-        <div  flex-container="row" flex-gutter="24">
-            <div flex-item>
-              <md-input-container class="md-block">
-                <label>Facultad</label>
-                <md-select ng-model="model._facultad" ng-model-options="{trackBy: '$value._id'}">
-                  <md-option ng-repeat="fac in facultades" ng-value="fac">
-                    {{fac.nombre}}
-                  </md-option>
-                </md-select>
-                <!--input required name="facultad" ng-model="model.facultad"-->
-                <div ng-messages="myForm.facultad.$error"  ng-if="submited">
-                  <div ng-message="required">{{message.Required}}</div>
-                </div>
-              </md-input-container>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Nombres</label>
+            <input required name="nombres" ng-model="model.nombres">
+            <div ng-messages="myForm.nombres.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
             </div>
+          </md-input-container>
         </div>
-        </form>
-    </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Apellidos</label>
+            <input required name="apellidos" ng-model="model.apellidos">
+            <div ng-messages="myForm.apellidos.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+      </div>
 
-    <div class="dialog__actions">
-         <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-         <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-    </div>
-  </md-dialog-content>
+      <div flex-container="row" flex-gutter="24">
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Condición</label>
+            <input required name="condicion" ng-model="model.condicion">
+            <div ng-messages="myForm.condicion.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Grado</label>
+            <input required name="grado" ng-model="model.grado">
+            <div ng-messages="myForm.grado.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Tipo Dedicación</label>
+            <input required name="tipoDedicacion" ng-model="model.tipoDedicacion">
+            <div ng-messages="myForm.tipoDedicacion.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+      </div>
+
+      <div flex-container="row" flex-gutter="24">
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Facultad</label>
+            <md-select ng-model="model._facultad" ng-model-options="{trackBy: '$value._id'}">
+              <md-option ng-repeat="fac in facultades" ng-value="fac">
+                {{fac.nombre}}
+              </md-option>
+            </md-select>
+            <div ng-messages="myForm.facultad.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+      </div>
+
+      <div flex-container="row" flex-gutter="24">
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Nombre de Usuario</label>
+            <input required name="username" ng-model="model.usuario.username">
+            <div ng-messages="myForm._usuario.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Contraseña</label>
+            <input required name="username" ng-model="model.usuario.password">
+            <div ng-messages="myForm._usuario.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div flex>
+          <md-input-container class="md-block">
+            <label>Correo Electrónico</label>
+            <input required name="password" ng-model="model.usuario.email">
+            <div ng-messages="myForm.usuario.email.$error" ng-if="submited">
+              <div ng-message="required">{{message.Required}}</div>
+            </div>
+          </md-input-container>
+        </div>
+      </div>
+    </md-dialog-content>
+
+    <md-dialog-actions layout="row">
+    </md-dialog-actions>
+    
+  </form>
 </md-dialog>
